k8s/get.micro.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get
  template:
    metadata:
      labels:
        app: get
    spec:
      containers:
        - name: get
          image: gustafdahl/get
---
apiVersion: v1
kind: Service
metadata:
  name: get-srv
spec:
  selector:
    app: get
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
