k8s/mono.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mono-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mono
  template:
    metadata:
      labels:
        app: mono
    spec:
      containers:
        - name: mono
          image: gustafdahl/mono
---
apiVersion: v1
kind: Service
metadata:
  name: mono-srv
spec:
  selector:
    app: mono
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
