k8s/post.micro.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: gustafdahl/post
---
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  selector:
    app: post
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
