k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    ### Micro ###
    - host: micro.gustafdahl.com
      http:
        paths:
          # Config for get method
          - path: /ping/get
            pathType: Prefix
            backend:
              service:
                name: get-srv
                port:
                  number: 3000
          # Config for post method
          - path: /ping/post
            pathType: Prefix
            backend:
              service:
                name: post-srv
                port:
                  number: 3000
          # Config for put method
          - path: /ping/put
            pathType: Prefix
            backend:
              service:
                name: put-srv
                port:
                  number: 3000
          # Config for delete method
          - path: /ping/delete
            pathType: Prefix
            backend:
              service:
                name: delete-srv
                port:
                  number: 3000

    ### Mono Start ###
    - host: mono.gustafdahl.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: mono-srv
                port:
                  number: 3000

    ### Frontend ###
    - host: client.gustafdahl.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
